--- a/environment.yml
+++ b/environment.yml
@@ -90,7 +90,6 @@ dependencies:
   - tk=8.6.12
   - tomli=2.0.1
   - typing_extensions=4.6.1
-  - tzdata=2023c
   - wheel=0.40.0
   - x264=1!164.3095
   - x265=3.5
@@ -101,11 +100,31 @@ dependencies:
       - autoflake8==0.4.0
       - autopep8==2.0.2
       - click==8.1.3
+      - emoji==2.4.0
       - flake8==6.0.0
+      - imageio==2.29.0
+      - lazy-loader==0.2
       - mccabe==0.7.0
+      - networkx==3.1
       - opencv-python==4.7.0.72
+      - packaging==23.1
       - pillow==9.5.0
+      - prompt-toolkit==3.0.38
       - pycodestyle==2.10.0
+      - pydantic==1.10.8
+      - pydicom==2.3.1
+      - pyfiglet==0.8.post1
       - pyflakes==3.0.1
+      - pygments==2.15.1
+      - python-dateutil==2.8.2
+      - pytz==2023.3
+      - pywavelets==1.4.1
+      - questionary==1.10.0
+      - scikit-image==0.20.0
+      - scipy==1.10.1
       - semver==3.0.0
+      - six==1.16.0
+      - tifffile==2023.4.12
+      - tzdata==2023.3
+      - wcwidth==0.2.6
 prefix: /Volumes/Devo/miniforge3/envs/coreimage
