--- a/environment.yml
+++ b/environment.yml
@@ -97,14 +97,27 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
+      - a-cv-imwrite-imread-plus==0.11
+      - a-cv2-easy-resize==0.10
       - autoflake8==0.4.0
       - autopep8==2.0.2
+      - better-exceptions==0.3.3
+      - certifi==2023.5.7
+      - charset-normalizer==3.1.0
       - click==8.1.3
+      - colorama==0.4.6
+      - coreimage==0.0.10
+      - corelog==0.0.8
+      - create-empty-image==0.10
+      - cv2-collage-v2==0.11
       - emoji==2.4.0
       - flake8==6.0.0
+      - idna==3.4
       - imageio==2.29.0
       - lazy-loader==0.2
+      - markdown-it-py==2.2.0
       - mccabe==0.7.0
+      - mdurl==0.1.2
       - networkx==3.1
       - opencv-python==4.7.0.72
       - packaging==23.1
@@ -120,11 +133,17 @@ dependencies:
       - pytz==2023.3
       - pywavelets==1.4.1
       - questionary==1.10.0
+      - rectangle-packer==2.0.1
+      - requests==2.31.0
+      - rich==13.3.5
       - scikit-image==0.20.0
       - scipy==1.10.1
       - semver==3.0.0
       - six==1.16.0
+      - structlog==23.1.0
       - tifffile==2023.4.12
+      - touchtouch==0.11
       - tzdata==2023.3
+      - urllib3==2.0.2
       - wcwidth==0.2.6
 prefix: /Volumes/Devo/miniforge3/envs/coreimage
