--- a/environment.yml
+++ b/environment.yml
@@ -96,24 +96,32 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
+      - a-cv-imwrite-imread-plus==0.13
+      - annotated-types==0.5.0
+      - appdirs==1.4.4
       - autopep8==2.0.2
       - better-exceptions==0.3.3
       - certifi==2023.5.7
       - charset-normalizer==3.1.0
       - click==8.1.3
       - colorama==0.4.6
+      - corefile==0.1.5
       - corelog==0.0.11
       - create-empty-image==0.10
       - emoji==2.4.0
+      - fs==2.4.16
       - idna==3.4
+      - isiter==0.10
       - markdown-it-py==2.2.0
       - mdurl==0.1.2
       - opencv-contrib-python==4.7.0.72
       - packaging==23.1
+      - photocollage==1.4.5
       - pillow==9.5.0
       - prompt-toolkit==3.0.38
       - pycodestyle==2.10.0
-      - pydantic==1.10.8
+      - pydantic==2.3.0
+      - pydantic-core==2.6.3
       - pydicom==2.3.1
       - pyfiglet==0.8.post1
       - pyflakes==3.0.1
@@ -130,8 +138,9 @@ dependencies:
       - six==1.16.0
       - structlog==23.1.0
       - tifffile==2023.4.12
+      - tolerant-isinstance==0.10
       - touchtouch==0.11
       - tzdata==2023.3
       - urllib3==2.0.2
       - wcwidth==0.2.6
-prefix: /Volumes/Devo/Users/jago/miniforge3/envs/coreimage
+prefix: /Volumes/Devo/Users/jago/mambaforge/envs/coreimage
