--- a/environment.yml
+++ b/environment.yml
@@ -126,9 +126,11 @@ dependencies:
       - pyfiglet==0.8.post1
       - pyflakes==3.0.1
       - pygments==2.15.1
+      - pypng==0.20220715.0
       - python-dateutil==2.8.2
       - pytz==2023.3
       - pywavelets==1.4.1
+      - qrcode==7.4.2
       - questionary==1.10.0
       - rectangle-packer==2.0.1
       - requests==2.31.0
@@ -137,6 +139,7 @@ dependencies:
       - semver==3.0.0
       - six==1.16.0
       - structlog==23.1.0
+      - term-image==0.8.0.dev0
       - tifffile==2023.4.12
       - tolerant-isinstance==0.10
       - touchtouch==0.11
