"update the diff for environment.yml and env.yml. [ci skip] (x1.0.0-x2.0) (x3.5.0)/x4.0a-x3a-y1)"

--- a/environment.yml
+++ b/environment.yml
@@ -2,148 +2,68 @@ name: coreimage
 channels:
   - conda-forge
 dependencies:
-  - aom=3.5.0
   - bzip2=1.0.8
-  - c-ares=1.19.1
-  - ca-certificates=2023.5.7
-  - cairo=1.16.0
-  - dav1d=1.2.0
-  - expat=2.5.0
-  - ffmpeg=6.0.0
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - freetype=2.12.1
-  - fribidi=1.0.10
-  - gettext=0.21.1
-  - giflib=5.2.1
-  - gmp=6.2.1
-  - gnutls=3.7.8
-  - graphite2=1.3.13
-  - harfbuzz=7.3.0
-  - hdf5=1.14.0
-  - icu=72.1
-  - jasper=4.0.0
-  - krb5=1.20.1
-  - lame=3.100
-  - lerc=4.0.0
-  - libaec=1.0.6
-  - libass=0.17.1
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libcurl=8.1.1
-  - libcxx=16.0.4
-  - libdeflate=1.18
-  - libedit=3.1.20191231
-  - libev=4.33
+  - ca-certificates=2023.11.17
   - libexpat=2.5.0
   - libffi=3.4.2
-  - libgfortran=5.0.0
-  - libgfortran5=12.2.0
-  - libglib=2.76.3
-  - libiconv=1.17
-  - libidn2=2.3.4
-  - libjpeg-turbo=2.1.5.1
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
-  - libnghttp2=1.52.0
-  - libopenblas=0.3.21
-  - libopus=1.3.1
-  - libpng=1.6.39
-  - libprotobuf=3.21.12
-  - libsqlite=3.42.0
-  - libssh2=1.10.0
-  - libtasn1=4.19.0
-  - libtiff=4.5.0
-  - libunistring=0.9.10
-  - libvpx=1.13.0
-  - libwebp=1.3.0
-  - libwebp-base=1.3.0
-  - libxml2=2.11.4
+  - libsqlite=3.44.2
   - libzlib=1.2.13
-  - llvm-openmp=16.0.4
-  - mypy=1.3.0
-  - mypy_extensions=1.0.0
-  - ncurses=6.3
-  - nettle=3.8.1
-  - openh264=2.3.1
-  - openssl=3.1.0
-  - p11-kit=0.24.1
-  - pcre2=10.40
-  - pip=23.1.2
-  - pixman=0.40.0
-  - psutil=5.9.5
-  - python=3.11.3
-  - python_abi=3.11
+  - ncurses=6.4
+  - openssl=3.2.0
+  - pip=23.3.2
+  - python=3.11.7
   - readline=8.2
-  - setuptools=67.7.2
-  - svt-av1=1.5.0
-  - tk=8.6.12
-  - tomli=2.0.1
-  - typing_extensions=4.6.1
-  - wheel=0.40.0
-  - x264=1!164.3095
-  - x265=3.5
+  - setuptools=69.0.3
+  - tk=8.6.13
+  - tzdata=2023d
+  - wheel=0.42.0
   - xz=5.2.6
-  - zlib=1.2.13
-  - zstd=1.5.2
   - pip:
-      - a-cv-imwrite-imread-plus==0.13
-      - annotated-types==0.5.0
+      - annotated-types==0.6.0
       - appdirs==1.4.4
-      - autopep8==2.0.2
       - better-exceptions==0.3.3
-      - certifi==2023.5.7
-      - charset-normalizer==3.1.0
-      - click==8.1.3
+      - certifi==2023.11.17
+      - charset-normalizer==3.3.2
+      - click==8.1.7
       - colorama==0.4.6
       - corefile==0.1.5
-      - corelog==0.0.12
-      - corestring==0.3.1
-      - create-empty-image==0.10
-      - emoji==2.4.0
+      - corelog==0.0.15
+      - corestring==0.3.7
+      - einops==0.7.0
+      - emoji==2.10.0
+      - filelock==3.13.1
       - fs==2.4.16
-      - idna==3.4
-      - isiter==0.10
-      - markdown-it-py==2.2.0
+      - fsspec==2023.12.2
+      - idna==3.6
+      - jinja2==3.1.3
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.4
       - mdurl==0.1.2
+      - mpmath==1.3.0
+      - networkx==3.2.1
       - numpy==1.26.3
       - opencv-python==4.9.0.80
-      - packaging==23.1
-      - photocollage==1.4.5
-      - pillow==10.1.0
-      - prompt-toolkit==3.0.38
-      - pycodestyle==2.10.0
-      - pydantic==2.5.0
-      - pydantic-core==2.14.1
-      - pydicom==2.3.1
-      - pyfiglet==0.8.post1
-      - pyflakes==3.0.1
-      - pygments==2.15.1
-      - pypng==0.20220715.0
-      - python-dateutil==2.8.2
-      - pytz==2023.3
-      - pywavelets==1.4.1
-      - qrcode==7.4.2
-      - questionary==1.10.0
-      - rectangle-packer==2.0.2
+      - pillow==10.2.0
+      - prompt-toolkit==3.0.36
+      - pydantic==2.5.3
+      - pydantic-core==2.14.6
+      - pyfiglet==1.0.2
+      - pygments==2.17.2
+      - questionary==2.0.1
       - requests==2.31.0
-      - rich==13.3.5
-      - scipy==1.10.1
+      - rich==13.7.0
+      - safetensors==0.4.2
       - segno==1.6.0
-      - semver==3.0.0
+      - semver==3.0.2
       - six==1.16.0
+      - spandrel==0.1.8
       - stringcase==1.2.0
-      - structlog==23.1.0
+      - structlog==24.1.0
+      - sympy==1.12
       - term-image==0.8.0
-      - tifffile==2023.4.12
-      - tolerant-isinstance==0.10
-      - touchtouch==0.11
-      - tzdata==2023.3
-      - urllib3==2.0.2
-      - wcwidth==0.2.6
+      - torch==2.3.0.dev20240124
+      - torchvision==0.18.0.dev20240124
+      - typing-extensions==4.9.0
+      - urllib3==2.1.0
+      - wcwidth==0.2.13
 prefix: /Volumes/Devo/Users/jago/miniforge3/envs/coreimage
