--- a/environment.yml
+++ b/environment.yml
@@ -57,7 +57,7 @@ dependencies:
       - packaging==23.2
       - pillow==10.2.0
       - prompt-toolkit==3.0.36
-      - protobuf==3.20.3
+      - protobuf>=3.20.3
       - pycparser==2.21
       - pydantic==2.5.3
       - pydantic-core==2.14.6
