--- a/environment.yml
+++ b/environment.yml
@@ -19,67 +19,68 @@ dependencies:
   - wheel=0.42.0
   - xz=5.2.6
   - pip:
-      - absl-py>=2.1.0
-      - annotated-types>=0.6.0
-      - appdirs>=1.4.4
-      - attrs>=23.2.0
-      - better-exceptions>=0.3.3
-      - certifi>=2023.11.17
-      - cffi>=1.16.0
-      - charset-normalizer>=3.3.2
-      - click>=8.1.7
-      - colorama>=0.4.6
-      - contourpy>=1.2.0
-      - corefile>=0.1.5
-      - corelog>=0.0.15
-      - corestring>=0.3.7
-      - cycler>=0.12.1
-      - einops>=0.7.0
-      - emoji>=2.10.0
-      - filelock>=3.13.1
-      - flatbuffers>=23.5.26
-      - fonttools>=4.48.1
-      - fs>=2.4.16
-      - fsspec>=2023.12.2
-      - idna>=3.6
-      - jinja2>=3.1.3
-      - kiwisolver>=1.4.5
-      - markdown-it-py>=3.0.0
-      - markupsafe>=2.1.4
-      - matplotlib>=3.8.2
-      - mdurl>=0.1.2
-      - mediapipe>=0.10.9
-      - mpmath>=1.3.0
-      - networkx>=3.2.1
-      - numpy>=1.26.4
-      - opencv-contrib-python>=4.9.0.80
-      - opencv-python>=4.9.0.80
-      - packaging>=23.2
-      - pillow>=10.2.0
-      - prompt-toolkit>=3.0.36
-      - pycparser>=2.21
-      - pydantic>=2.5.3
-      - pydantic-core>=2.14.6
-      - pyfiglet>=1.0.2
-      - pygments>=2.17.2
-      - pyparsing>=3.1.1
-      - python-dateutil>=2.8.2
-      - questionary>=2.0.1
-      - requests>=2.31.0
-      - rich>=13.7.0
-      - safetensors>=0.4.2
-      - segno>=1.6.0
-      - semver>=3.0.2
-      - six>=1.16.0
-      - sounddevice>=0.4.6
-      - spandrel>=0.2.1
-      - stringcase>=1.2.0
-      - structlog>=24.1.0
-      - sympy>=1.12
-      - term-image>=0.8.0.1
-      - torch>=2.3.0.dev20240124
-      - torchvision>=0.18.0.dev20240124
-      - typing-extensions>=4.9.0
-      - urllib3>=2.1.0
-      - wcwidth>=0.2.13
+      - absl-py==2.1.0
+      - annotated-types==0.6.0
+      - appdirs==1.4.4
+      - attrs==23.2.0
+      - better-exceptions==0.3.3
+      - certifi==2023.11.17
+      - cffi==1.16.0
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - colorama==0.4.6
+      - contourpy==1.2.0
+      - corefile==0.1.5
+      - corelog==0.0.15
+      - corestring==0.3.7
+      - cycler==0.12.1
+      - einops==0.7.0
+      - emoji==2.10.0
+      - facenet-pytorch==2.5.3
+      - filelock==3.13.1
+      - flatbuffers==23.5.26
+      - fonttools==4.48.1
+      - fs==2.4.16
+      - fsspec==2023.12.2
+      - idna==3.6
+      - jinja2==3.1.3
+      - kiwisolver==1.4.5
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.4
+      - matplotlib==3.8.2
+      - mdurl==0.1.2
+      - mpmath==1.3.0
+      - networkx==3.2.1
+      - numpy==1.26.4
+      - opencv-contrib-python==4.9.0.80
+      - opencv-python==4.9.0.80
+      - packaging==23.2
+      - pillow==10.2.0
+      - prompt-toolkit==3.0.36
+      - protobuf==3.20.3
+      - pycparser==2.21
+      - pydantic==2.5.3
+      - pydantic-core==2.14.6
+      - pyfiglet==1.0.2
+      - pygments==2.17.2
+      - pyparsing==3.1.1
+      - python-dateutil==2.8.2
+      - questionary==2.0.1
+      - requests==2.31.0
+      - rich==13.7.0
+      - safetensors==0.4.2
+      - segno==1.6.0
+      - semver==3.0.2
+      - six==1.16.0
+      - sounddevice==0.4.6
+      - spandrel==0.2.1
+      - stringcase==1.2.0
+      - structlog==24.1.0
+      - sympy==1.12
+      - term-image==0.8.0.1
+      - torch==2.3.0.dev20240124
+      - torchvision==0.18.0.dev20240124
+      - typing-extensions==4.9.0
+      - urllib3==2.1.0
+      - wcwidth==0.2.13
 prefix: /Volumes/Devo/Users/jago/miniforge3/envs/coreimage
