--- a/environment.yml
+++ b/environment.yml
@@ -42,6 +42,7 @@ dependencies:
       - fonttools==4.48.1
       - fs==2.4.16
       - fsspec==2023.12.2
+      - huggingface-hub==0.20.3
       - idna==3.6
       - jinja2==3.1.3
       - kiwisolver==1.4.5
@@ -59,18 +60,21 @@ dependencies:
       - prompt-toolkit==3.0.36
       - protobuf==3.20.3
       - pycparser==2.21
-      - pydantic==2.5.3
-      - pydantic-core==2.14.6
+      - pydantic==2.7.1
+      - pydantic-core==2.18.2
       - pyfiglet==1.0.2
       - pygments==2.17.2
       - pyparsing==3.1.1
       - python-dateutil==2.8.2
+      - pyyaml==6.0.1
       - questionary==2.0.1
+      - regex==2023.12.25
       - requests==2.31.0
       - rich==13.7.0
       - safetensors==0.4.2
       - segno==1.6.0
       - semver==3.0.2
+      - shellingham==1.5.4
       - six==1.16.0
       - sounddevice==0.4.6
       - spandrel==0.2.1
@@ -78,8 +82,12 @@ dependencies:
       - structlog==24.1.0
       - sympy==1.12
       - term-image==0.18.0.1
-      - torch==2.3.0.dev20240124
-      - torchvision==0.18.0.dev20240124
+      - tokenizers==0.15.2
+      - torch==2.4.0.dev20240330
+      - torchvision==0.19.0.dev20240330
+      - tqdm==4.66.2
+      - transformers==4.39.2
+      - typer==0.12.1
       - typing-extensions==4.9.0
       - urllib3==2.1.0
       - wcwidth==0.2.13
