--- a/environment.yml
+++ b/environment.yml
@@ -3,20 +3,20 @@ channels:
   - conda-forge
 dependencies:
   - bzip2=1.0.8
-  - ca-certificates=2023.11.17
-  - libexpat=2.5.0
+  - ca-certificates=2024.2.2
+  - libexpat=2.6.2
   - libffi=3.4.2
-  - libsqlite=3.44.2
+  - libsqlite=3.45.3
   - libzlib=1.2.13
-  - ncurses=6.4
-  - openssl=3.2.0
-  - pip=23.3.2
-  - python=3.11.7
+  - ncurses=6.5
+  - openssl=3.3.0
+  - pip=24.0
+  - python=3.11.9
   - readline=8.2
-  - setuptools=69.0.3
+  - setuptools=70.0.0
   - tk=8.6.13
-  - tzdata=2023d
-  - wheel=0.42.0
+  - tzdata=2024a
+  - wheel=0.43.0
   - xz=5.2.6
   - pip:
       - absl-py==2.1.0
