--- a/environment.yml
+++ b/environment.yml
@@ -36,13 +36,13 @@ dependencies:
       - cycler==0.12.1
       - einops==0.7.0
       - emoji==2.10.0
-      - facenet-pytorch==2.5.3
+      - facenet-pytorch==2.6.0
       - filelock==3.13.1
       - flatbuffers==23.5.26
       - fonttools==4.48.1
       - fs==2.4.16
       - fsspec==2023.12.2
-      - huggingface-hub==0.20.3
+      - huggingface-hub==0.23.1
       - idna==3.6
       - jinja2==3.1.3
       - kiwisolver==1.4.5
@@ -82,11 +82,11 @@ dependencies:
       - structlog==24.1.0
       - sympy==1.12
       - term-image==0.18.0.1
-      - tokenizers==0.15.2
-      - torch==2.4.0.dev20240330
-      - torchvision==0.19.0.dev20240330
+      - tokenizers==0.19.1
+      - torch==2.2.2
+      - torchvision==0.17.2
       - tqdm==4.66.2
-      - transformers==4.39.2
+      - transformers==4.41.1
       - typer==0.12.1
       - typing-extensions==4.9.0
       - urllib3==2.1.0
