--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,6 @@ dependencies:
   - pip=24.0
   - python=3.11.9
   - readline=8.2
-  - setuptools=70.0.0
   - tk=8.6.13
   - tzdata=2024a
   - wheel=0.43.0
@@ -24,6 +23,7 @@ dependencies:
       - appdirs==1.4.4
       - attrs==23.2.0
       - better-exceptions==0.3.3
+      - build==1.3.0
       - certifi==2023.11.17
       - cffi==1.16.0
       - charset-normalizer==3.3.2
@@ -34,6 +34,7 @@ dependencies:
       - corelog==0.0.15
       - corestring==0.3.7
       - cycler==0.12.1
+      - cytoolz==1.0.1
       - einops==0.7.0
       - emoji==2.10.0
       - facenet-pytorch==2.6.0
@@ -65,6 +66,7 @@ dependencies:
       - pyfiglet==1.0.2
       - pygments==2.17.2
       - pyparsing==3.1.1
+      - pyproject-hooks==1.2.0
       - python-dateutil==2.8.2
       - pyyaml==6.0.1
       - questionary==2.0.1
@@ -74,6 +76,7 @@ dependencies:
       - safetensors==0.4.2
       - segno==1.6.0
       - semver==3.0.2
+      - setuptools==80.9.0
       - shellingham==1.5.4
       - six==1.16.0
       - sounddevice==0.4.6
@@ -83,6 +86,7 @@ dependencies:
       - sympy==1.12
       - term-image==0.18.0.1
       - tokenizers==0.19.1
+      - toolz==1.0.0
       - torch==2.2.2
       - torchvision==0.17.2
       - tqdm==4.66.2
