"add taskfile.yaml to diff diff output. closes  [ci-skip]  → “taskfile↓↘↜↦←↑↢↎↍↧↚↠↝”"
"add realesrgan_x2plus_mtg_v1 to list of coreimage diffs. (#480) →4.1↓4.2. “diff”"

"fix gitattributes diff for x2plus and x2+ mtg 1. 0.0.0-rc1.0/x2plus_mtg_v1.1/x1.2.1-rc2"

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -9,7 +9,7 @@ tasks:
   default:
     dir: src/
     cmds:
-      - mamba run --live-stream -n {{.PROJECT}} python -m {{.PROJECT}} {{.CLI_ARGS}}
+      - mamba run -n {{.PROJECT}} python -m {{.PROJECT}} {{.CLI_ARGS}}
     silent: true
 
   export:
