"add taskfile.yaml to taskdiff diff output. closes  [yuyeow][miklichi] → 📍–↘↓“↜”]"

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -27,6 +27,7 @@ tasks:
   build:
     desc: build
     cmds:
+      - rm -rf build
       - rm -rf dist/*
       - mamba run -n {{.PROJECT}} python  -m build
 
