--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools>=61.0", "setuptools_scm"]
+requires = ["setuptools>=61.0", "setuptools_scm", "build"]
 
 [project]
 authors = [{ name = "coreimage", email = "alex@cacko.net" }]
@@ -22,7 +22,6 @@ dependencies = [
     "pygments>=2.15.1",
     "questionary>=1.10.0",
     "pyfiglet>=0.8.post1",
-    "pygments>=2.15.1",
     "emoji>=2.4.0",
     "pydantic>=2.7.1",
     "corelog>0.0.22",
@@ -41,8 +40,8 @@ dependencies = [
 [project.scripts]
 coreimage = "coreimage.cli:cli"
 
-[tool.setuptools.dynamic]
-version = { attr = "coreimage.__version__" }
+[tool.setuptools_scm]
+version_file = "version.txt"
 
 [tool.setuptools.package-data]
 "*" = ["*.pth"]
